--- a/src/sass/global/_breakpoints.scss
+++ b/src/sass/global/_breakpoints.scss
@@ -16,7 +16,8 @@ $mediaquerys: (
     md: 768,
     lg: 1200,
     // lg: 1024,
-    xl: 1440
+    xl: 1440,
+    xxl: 2000
   );
 
 //メディアクエリー
@@ -24,7 +25,8 @@ $mediaquerys: (
   sm: "screen and (min-width: #{map-get($breakpoints,'sm')}px)",
   md: "screen and (min-width: #{map-get($breakpoints,'md')}px)",
   lg: "screen and (min-width: #{map-get($breakpoints,'lg')}px)",
-  xl: "screen and (min-width: #{map-get($breakpoints,'xl')}px)"
+  xl: "screen and (min-width: #{map-get($breakpoints,'xl')}px)",
+  xxl: "screen and (min-width: #{map-get($breakpoints,'xxl')}px)"
 );
 }
 
