--- a/src/sass/module/_en-accent.scss
+++ b/src/sass/module/_en-accent.scss
@@ -7,4 +7,8 @@
   color: var(--white);
   line-height: calc(117/119);
   text-transform: uppercase;
+
+  @include mq("md") {
+    font-size: rem(192);
+  }
 }
