--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -28,12 +28,12 @@ dd {
 
 /* Set core root defaults */
 html {
-  scroll-behavior: smooth;
-  scroll-margin-top: calc(65/16*1rem);
+  // scroll-behavior: smooth;
+  // scroll-margin-top: calc(65/16*1rem);
 
-  @media (min-width: 768px) {
-    scroll-margin-top: calc(90/16*1rem);
-  }
+  // @media (min-width: 768px) {
+  //   scroll-margin-top: calc(90/16*1rem);
+  // }
 }
 
 /* Set core body defaults */
