--- a/src/sass/module/_company.scss
+++ b/src/sass/module/_company.scss
@@ -4,23 +4,13 @@
   overflow-x: clip;
   position: relative;
   padding-bottom: rem(420);
+
+  @include mq("md") {
+    padding-bottom: rem(213);
+  }
 }
 
 .company::before {
-  content: "";
-  position: absolute;
-  top: rem(-23);
-  left: calc(50% - min(350/430*100vw, 430px));
-  transform: translateY(-100%);
-  width: rem(421);
-  aspect-ratio: 1/1;
-  background-image: url(../images/circle-img1.webp);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.company::after {
   content: "";
   position: absolute;
   top: clamp(-620px, -560/430*100vw, rem(-550));
@@ -33,9 +23,61 @@
   background-size: cover;
   mix-blend-mode: multiply;
   z-index: -1;
+
+  @include mq("md") {
+    top: clamp(-650px, -390/1440*100vw, -390px);
+    aspect-ratio: 1440/837;
+  }
+
+  @include mq("xxl") {
+    background-size: 120% 100%;
+  }
+}
+
+.company::after {
+  @include mq("md") {
+    content: "";
+    position: absolute;
+    top: 28%;
+    left: 0;
+    width: 100%;
+    aspect-ratio: 1440/837;
+    background-image: url(../images/bg-wave-bottom.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    mix-blend-mode: multiply;
+    z-index: -1;
+  }
+}
+
+.company__wrapper {
+  position: relative;
+}
+
+.company__wrapper::before {
+  content: "";
+  position: absolute;
+  top: rem(-23);
+  left: calc(50% - min(350/430*100vw, 430px));
+  transform: translateY(-100%);
+  width: rem(421);
+  aspect-ratio: 1/1;
+  background-image: url(../images/circle-img1.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  @include mq("md") {
+    top: rem(-75);
+    left: calc(50% - clamp(rem(840), 964/1440*100vw, 1100px));
+    transform: translateY(0);
+    width: min(759/1440*100vw, rem(759));
+  }
 }
 
 .company__inner.inner {}
+
 
 .company__accent {
   position: absolute;
@@ -44,11 +86,17 @@
   transform: translateY(-66.5%);
   writing-mode: vertical-rl;
   z-index: -1;
+
+  @include mq("md") {
+    top: calc(24/1440*100vw);
+    right: rem(-24);
+    transform: translateY(0);
+  }
 }
 
 .company__overview {
   @include mq("md") {
-    max-width: rem(766);
+    max-width: rem(694);
     margin-left: auto;
   }
 }
@@ -61,6 +109,10 @@
 .company__overview-list {
   display: grid;
   margin-top: rem(30);
+
+  @include mq("md") {
+    margin-top: rem(86);
+  }
 }
 
 .company__overview-wrap {
@@ -72,8 +124,7 @@
 
   @include mq("md") {
     grid-template-columns: calc(7em + rem(40)) 1fr;
-    padding-block: rem(20);
-    padding-inline: initial;
+    padding: initial;
     border-bottom: initial;
   }
 }
@@ -84,8 +135,10 @@
   line-height: calc(19/14);
 
   @include mq("md") {
+    padding-block: rem(12) rem(13);
     padding-inline: rem(20);
     font-size: rem(16);
+    line-height: calc(32/16);
     border-bottom: 2px solid var(--purple);
   }
 }
@@ -95,8 +148,9 @@
   line-height: calc(27/14);
 
   @include mq("md") {
-    padding-inline: rem(35) rem(30);
-    font-size: rem(17);
+    padding-block: rem(12) rem(13);
+    padding-inline: rem(36) rem(30);
+    font-size: rem(16);
     line-height: calc(32/16);
     border-bottom: 1px solid var(--light-gray);
   }
@@ -104,6 +158,11 @@
 
 .company__overview-desc a {
   text-decoration: underline;
+
+  @include mq("md") {
+    margin-left: rem(18);
+    letter-spacing: 0.05em;
+  }
 }
 
 .company__history {
@@ -127,6 +186,14 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @include mq("md") {
+    bottom: initial;
+    top: rem(-44);
+    right: calc(50% - clamp(480px, 832 / 1440* 100vw, 1200px));
+    width: min(475 / 1440* 100vw, 630px);
+    transform: initial;
+  }
 }
 
 .company__history-head {
@@ -139,6 +206,7 @@
 }
 
 .company__history-list {
+  position: relative;
   margin-top: rem(37);
   display: grid;
   row-gap: rem(16);
@@ -146,11 +214,41 @@
   @include mq("md") {
     margin-top: rem(64);
     row-gap: rem(12);
+    max-width: rem(962);
+  }
+}
+
+.company__history-list::before {
+  @include mq("md") {
+    content: "";
+    position: absolute;
+    top: 1lh;
+    left: rem(198);
+    width: 2px;
+    height: calc(100% - 3lh);
+    background-color: var(--purple);
   }
 }
 
 .company__history-item {
   position: relative;
+
+  @include mq("md") {
+    display: grid;
+    grid-template-columns: auto auto 1fr;
+    column-gap: rem(27);
+    row-gap: rem(12);
+  }
+}
+
+.company__history-item:not(:last-of-type)::before {
+  // content: "";
+  // position: absolute;
+  top: 0;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background-color: var(--purple);
 }
 
 .company__history-year {
@@ -168,14 +266,28 @@
 .company__history-wrap {
   display: grid;
   gap: rem(12);
+
+  @include mq("md") {
+    padding-top: rem(6);
+    grid-template-columns: rem(35) 1fr;
+    grid-column: 2/4;
+  }
 }
 
 .company__history-wrap:first-of-type {
   margin-top: rem(4);
+
+  @include mq("md") {
+    margin-top: initial;
+  }
 }
 
 .company__history-wrap:not(:first-of-type) {
   margin-top: rem(12);
+
+  @include mq("md") {
+    margin-top: initial;
+  }
 }
 
 .company__history-month {
@@ -183,7 +295,10 @@
   font-weight: var(--font-bold);
   line-height: calc(22/16);
 
-  @include mq("md") {}
+  @include mq("md") {
+    justify-self: end;
+    line-height: calc(33/16);
+  }
 }
 
 .company__history-wrap:nth-of-type(1) .company__history-month {
@@ -191,14 +306,36 @@
   top: 0;
   left: rem(83);
   transform: translateY(50%);
+
+  @include mq("md") {
+    position: initial;
+    transform: initial;
+  }
 }
 
 .company__history-event {
+  position: relative;
   font-size: rem(14);
   line-height: calc(30/14);
 
   @include mq("md") {
+    padding-left: rem(88);
     font-size: rem(16);
-    line-height: calc(33/17);
+    line-height: calc(33/16);
+    line-break: anywhere;
+  }
+}
+
+.company__history-event::before {
+  @include mq("md") {
+    content: "";
+    position: absolute;
+    top: 0.33lh;
+    left: rem(36);
+    background-color: #E2E24A;
+    width: rem(12);
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    border: 1px solid var(--purple);
   }
 }
