--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -10,7 +10,7 @@
 
   @include mq("md") {
     --_border-radius: calc(100/16*1rem);
-    padding-block: rem(80);
+    padding-block: rem(90) rem(148);
   }
 }
 
@@ -19,6 +19,11 @@
   bottom: rem(20);
   left: rem(-8);
   mix-blend-mode: soft-light;
+
+  @include mq("md") {
+    bottom: rem(10);
+    left: rem(-12);
+  }
 }
 
 .contact__inner.inner {
@@ -37,6 +42,7 @@
   gap: rem(32);
 
   @include mq("md") {
+    margin-top: rem(52);
     max-width: 866px;
     grid-template-columns: calc(401/866*100%) calc(365/866*100%);
     gap: rem(20);
@@ -49,6 +55,7 @@
   line-height: calc(30/14);
 
   @include mq("md") {
+    padding-top: rem(12);
     font-size: rem(16);
     line-height: calc(32/16);
   }
@@ -56,6 +63,10 @@
 
 .contact__info {
   padding-left: calc(20/430*100vw);
+
+  @include mq("md") {
+    padding-left: initial;
+  }
 }
 
 .contact__info-head {
@@ -76,6 +87,11 @@
   color: var(--purple);
   letter-spacing: 0.03em;
   max-width: min(356/430*100vw, 356px);
+
+  @include mq("md") {
+    margin-top: rem(5);
+    max-width: rem(365);
+  }
 }
 
 .contact__info-tel-head {
@@ -96,7 +112,7 @@
 
   @include mq("md") {
     font-size: rem(45);
-    line-height: calc(61/45);
+    line-height: 1;
   }
 }
 
@@ -105,6 +121,7 @@
   line-height: calc(19/14);
 
   @include mq("md") {
+    margin-top: rem(4);
     font-size: rem(15);
     line-height: calc(20/15);
   }
