--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -5,19 +5,32 @@
   padding-block: rem(70) rem(50);
   background-image: url(../images/bg-footer-sp.webp);
   background-repeat: no-repeat;
-  background-position: left top;
-  background-size: cover;
+  background-position: center;
+  background-size: 100% 100%;
 
   @include mq("md") {
-    padding-block: rem(150) rem(75);
+    padding-block: rem(150) rem(70);
+    background-image: url(../images/bg-footer.webp);
   }
 }
 
-.footer__inner.inner {}
+.footer__inner.inner {
+  position: relative;
+
+  @include mq("md") {
+    max-width: initial;
+    padding-inline: calc(170/1440*100vw);
+  }
+}
 
 .footer__container {
-  display: grid;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+
+  @include mq("md") {
+    place-items: initial;
+  }
 }
 
 .footer__logo {
@@ -37,11 +50,13 @@
   color: var(--white);
   line-height: calc(20/14);
   text-align: center;
+  width: fit-content;
 
   @include mq("md") {
-    margin-top: rem(18);
+    margin-top: rem(16);
     font-size: rem(16);
-    line-height: calc(22/16);
+    line-height: calc(24/16);
+    text-align: left;
   }
 }
 
@@ -72,6 +87,11 @@
 .footer__copyright {
   margin-top: rem(48);
   text-align: center;
+
+  @include mq("md") {
+    margin-top: rem(5);
+    text-align: right;
+  }
 }
 
 .footer__copyright small {
@@ -88,11 +108,11 @@
 
 .footer__totop {
   position: absolute;
-  bottom: rem(40);
+  bottom: rem(-10);
   right: rem(20);
 
   @include mq("md") {
-    bottom: rem(65);
-    right: rem(50);
+    bottom: rem(-20);
+    right: calc(66/1440*100vw);
   }
 }
