--- a/src/sass/module/_service.scss
+++ b/src/sass/module/_service.scss
@@ -4,6 +4,10 @@
   position: relative;
   overflow-x: clip;
   z-index: 1;
+
+  @include mq("md") {
+    padding-bottom: rem(190);
+  }
 }
 
 .service__accent {
@@ -12,6 +16,11 @@
   left: rem(-16);
   writing-mode: sideways-lr;
   mix-blend-mode: soft-light;
+
+  @include mq("md") {
+    top: 3%;
+    left: rem(-24);
+  }
 }
 
 .service__inner.inner {}
@@ -29,19 +38,47 @@
   letter-spacing: 0.05em;
 
   @include mq("md") {
+    margin-top: rem(40);
+    margin-inline: auto;
     font-size: rem(16);
+    line-height: calc(32/16);
+    max-width: rem(617);
   }
 }
 
 .service__list {
   counter-reset: serviceNum;
-  margin-top: rem(70);
-  padding-inline: rem(30) rem(15);
   display: grid;
   gap: rem(64);
+  margin-top: rem(70);
+  padding-inline: rem(30) rem(15);
+
+  @include mq("md") {
+    grid-template-columns: repeat(3, 1fr);
+    gap: rem(25);
+    padding-inline: unset;
+  }
 }
 
 .service__item {
+  position: relative;
   counter-increment: serviceNum;
+
+  @include mq("md") {
+    // width: 33%;
+  }
 }
 
+.service__item:nth-of-type(2) {
+  @include mq("md") {
+    top: rem(70);
+    // margin-top: rem(70);
+  }
+}
+
+.service__item:nth-of-type(3) {
+  @include mq("md") {
+    top: rem(132);
+    // margin-top: rem(132);
+  }
+}
