--- a/src/sass/module/_totop.scss
+++ b/src/sass/module/_totop.scss
@@ -4,6 +4,7 @@
   display: block;
   width: rem(48);
   aspect-ratio: 1/1;
+  // opacity: 0;
   transition: transform 0.3s ease;
 
   @include mq("md") {
