--- a/sankou/assets/css/style.css
+++ b/sankou/assets/css/style.css
@@ -1447,6 +1447,7 @@ a {
 .recruit-block__title {
 	grid-gap: 0.5em;
 	align-items: center;
+	cursor: pointer;
 	display: grid;
 	font-size: 1rem;
 	font-weight: 700;
