--- a/sankou/style.css
+++ b/sankou/style.css
@@ -1,9 +1,4 @@
 @charset "utf-8";
 /*
-Theme Name: テーマ名
-Theme URI: テーマ使用サイトのURL
-Description: テーマの説明
-Author: 作者の名前
-Author URI: 作者のサイトのURL
-Version: バージョン
+Theme Name: 三光運輸
 */
