--- a/src/sass/module/_recruit-block.scss
+++ b/src/sass/module/_recruit-block.scss
@@ -22,6 +22,7 @@
   font-weight: var(--font-bold);
   line-height: calc(32/16);
   letter-spacing: 0.05em;
+  cursor: pointer;
 
   @include mq("md") {
     grid-template-columns: 1fr rem(18);
