--- a/sankou/assets/css/style.css
+++ b/sankou/assets/css/style.css
@@ -18,7 +18,7 @@
 	--white: #fff;
 	--dark-gray: #333;
 	--red: #FF0000;
-	--blue: #3358D3;
+	--blue: #3558D3;
 	--purple: #411B99;
 	--green: #0CA896;
 	--gray: #C9C9C9;
@@ -215,7 +215,7 @@ a {
 }
 
 .layout-company {
-	margin-top: 26.875rem;
+	margin-top: 29.625rem;
 }
 
 .layout-contact {
@@ -280,7 +280,7 @@ a {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	border-radius: calc(infinity * 1px);
+	border-radius: 100vmax;
 	color: #fff;
 	color: var(--white);
 	display: inline-block;
@@ -329,7 +329,6 @@ a {
 }
 
 .card__title {
-	-webkit-text-decoration: underline;
 	color: #411B99;
 	color: var(--purple);
 	font-size: 1.625rem;
@@ -338,6 +337,10 @@ a {
 	font-weight: var(--font-bold);
 	line-height: 1.96;
 	text-align: center;
+}
+
+.card__title span {
+	-webkit-text-decoration: underline;
 	text-decoration: underline;
 	text-decoration-thickness: 0.125rem;
 	text-underline-offset: 0.4615384615em;
@@ -711,10 +714,8 @@ a {
 }
 
 .form__wrap {
-	grid-row-gap: 0.125rem;
 	display: grid;
 	grid-template-columns: 1fr;
-	row-gap: 0.125rem;
 }
 
 .form__term {
@@ -752,10 +753,6 @@ a {
 	padding-right: 1em;
 	padding-top: 0.375em;
 	width: 100%;
-}
-
-.form__input:has([data-name=your-date]) input {
-	width: 9.75rem;
 }
 
 .form__item {
@@ -833,9 +830,9 @@ a {
 }
 
 .form__input textarea {
-	field-sizing: content;
-	min-height: 12.8125rem;
-	padding: 1.0625rem 1.25rem;
+	box-sizing: border-box;
+	height: 12.8125rem;
+	min-width: 100%;
 	resize: none;
 	width: 100%;
 }
@@ -880,7 +877,7 @@ a {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	border-radius: calc(infinity * 1px);
+	border-radius: 100vmax;
 	color: #fff;
 	color: var(--white);
 	font-size: 1.0625rem;
@@ -910,7 +907,6 @@ a {
 	mask-repeat: no-repeat;
 	mask-size: contain;
 	position: absolute;
-	transform: scaleX(-1);
 	transition: background-color 0.3s ease;
 	width: 1.125rem;
 }
@@ -968,10 +964,8 @@ a {
 .form__input [type=checkbox]:focus-visible,
 .form__input select:focus-visible,
 .form__input textarea:focus-visible {
-	background-color: #fff;
-	background-color: var(--white);
-	border-color: rgb(153, 171, 233);
-	filter: drop-shadow(0 0 0.3125rem rgb(153, 171, 233));
+	border-color: rgb(160, 141, 204);
+	filter: drop-shadow(0 0 0.3125rem rgb(160, 141, 204));
 }
 
 .wpcf7-list-item {
@@ -1059,7 +1053,7 @@ a {
 	z-index: -1;
 }
 
-.header:has(.is-open)::before {
+.header.is-scrolled::before {
 	opacity: 1;
 }
 
@@ -1098,7 +1092,7 @@ a {
 
 .header__logo-company {
 	display: block;
-	width: 9.625rem;
+	height: 1.125rem;
 }
 
 .header__logo-company img {
@@ -1154,8 +1148,8 @@ a {
 
 .header__hamburger::before,
 .header__hamburger::after {
-	background-color: #0CA896;
-	background-color: var(--green);
+	background-color: #3558D3;
+	background-color: var(--blue);
 	content: "";
 	display: block;
 	height: 0.125rem;
@@ -1190,7 +1184,7 @@ a {
 
 .header__drawer {
 	align-items: center;
-	background-image: linear-gradient(to bottom, #13687e, #209BA5);
+	background-image: linear-gradient(to bottom, #104696, #0676B6);
 	bottom: 0;
 	display: grid;
 	left: 0;
@@ -1242,8 +1236,7 @@ a {
 }
 
 .header__drawer-link-en {
-	color: #0CA896;
-	color: var(--green);
+	color: #3289D3;
 	font-family: "Raleway", sans-serif;
 	font-family: var(--en-font);
 	font-size: 1rem;
@@ -1257,9 +1250,9 @@ a {
 .header__drawer-contact {
 	background-color: #fff;
 	background-color: var(--white);
-	border-radius: calc(infinity * 1px);
-	color: #0CA896;
-	color: var(--green);
+	border-radius: 100vmax;
+	color: #3558D3;
+	color: var(--blue);
 	display: grid;
 	font-size: 1.3125rem;
 	font-weight: 700;
@@ -1369,7 +1362,20 @@ a {
 	border-top-left-radius: var(--_border-radius);
 	display: block;
 	height: inherit;
+	position: relative;
 	width: 84.375rem;
+}
+
+.mv__img::before {
+	background-color: rgba(112, 112, 112, 0.17);
+	border-top-left-radius: var(--_border-radius);
+	bottom: 0;
+	content: "";
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	z-index: 1;
 }
 
 .mv__img img {
@@ -1488,7 +1494,7 @@ a {
 	overflow: hidden;
 }
 
-.recruit-block__inner {
+.recruit-block__list {
 	margin-top: 1.25rem;
 	padding-bottom: 0.75rem;
 }
@@ -2155,10 +2161,12 @@ html {
 
 .form__content {
 	gap: 1.625rem;
+	max-width: 50rem;
 }
 
 .form__wrap {
-	grid-template-columns: 27% 1fr;
+	gap: 1.25rem;
+	grid-template-columns: 13em 1fr;
 }
 
 .form__wrap:has(input),
@@ -2184,6 +2192,10 @@ html {
 
 .form__term label {
 	height: inherit;
+}
+
+.form__input:has([data-name=your-name]) input {
+	width: min(100%, 21.25rem);
 }
 
 .form__acceptance {
@@ -2254,6 +2266,7 @@ html {
 }
 
 .header__logo-company {
+	height: auto;
 	padding-bottom: 0.8125rem;
 	padding-top: 0.8125rem;
 	width: 11.25rem;
@@ -2330,7 +2343,7 @@ html {
 	line-height: 1.3913043478;
 }
 
-.recruit-block__inner {
+.recruit-block__list {
 	margin-top: 2rem;
 	padding-bottom: 2.5rem;
 	padding-left: 2.5rem;
@@ -2463,12 +2476,11 @@ html {
 .form__input input {
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
+	width: min(100%, 18.125rem);
 }
 
-.form__input:has([data-name=your-date]) input {
-	padding-left: 1.25rem;
-	padding-right: 1.25rem;
-	width: 10.9375rem;
+.form__input:has([data-name=your-address]) input {
+	min-width: 100%;
 }
 
 .header__inner {
