--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -9,7 +9,7 @@
   color: var(--white);
   line-height: calc(21/15);
   text-align: left;
-  border-radius: calc(1px/0);
+  border-radius: 100vmax;
   background-image: var(--gradient-main);
   background-repeat: no-repeat;
   background-position: center;
