--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -49,6 +49,7 @@
 
 .mv__img {
   --_border-radius: calc(100/16*1rem);
+  position: relative;
   display: block;
   height: inherit;
   border-top-left-radius: var(--_border-radius);
@@ -57,6 +58,15 @@
   @include mq("md") {
     width: 100%;
   }
+}
+
+.mv__img::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: rgb(#707070 , 0.17);
+  z-index: 1;
+  border-top-left-radius: var(--_border-radius);
 }
 
 .mv__img img {
