--- a/sankou/assets/css/style.css
+++ b/sankou/assets/css/style.css
@@ -615,7 +615,6 @@ a {
 	font-weight: 600;
 	font-weight: var(--font-semi-bold);
 	line-height: 0.9831932773;
-	text-transform: uppercase;
 }
 
 .footer {
@@ -791,7 +790,7 @@ a {
 	align-items: center;
 	cursor: pointer;
 	display: inline-grid;
-	gap: 0.125rem;
+	gap: 0.3em;
 	grid-template-columns: auto 1fr;
 	justify-items: center;
 	place-items: center;
@@ -807,7 +806,7 @@ a {
 	position: relative;
 	top: 1px;
 	transition: border-color 0.3s;
-	width: 0.6em;
+	width: 1em;
 }
 
 .form__acceptance input + span::after {
@@ -830,7 +829,6 @@ a {
 }
 
 .form__input textarea {
-	box-sizing: border-box;
 	height: 12.8125rem;
 	min-width: 100%;
 	resize: none;
@@ -1018,7 +1016,7 @@ a {
 	height: 100%;
 	overflow-y: auto;
 	padding-left: 1.5rem;
-	padding-right: 3.125rem;
+	padding-right: 1.5rem;
 }
 
 .form__privacy-policy-list {
@@ -1040,8 +1038,7 @@ a {
 }
 
 .header::before {
-	background-image: linear-gradient(98deg, #f0ecfa 0%, #eff7ff 33.5%, #f0f6f7 69.46%, #f1edfc 100%);
-	background-image: var(--gradient-header);
+	background-image: linear-gradient(45deg, #F0ECFA, #EFF7FF);
 	bottom: 0;
 	content: "";
 	left: 0;
@@ -1349,6 +1346,7 @@ a {
 	top: 51%;
 	transform: translateY(-50%);
 	width: 16.875rem;
+	z-index: 2;
 }
 
 .mv__catch img {
@@ -1400,8 +1398,8 @@ a {
 	grid-gap: 0.8125rem;
 	-webkit-writing-mode: vertical-rl;
 	align-items: center;
-	color: #0CA896;
-	color: var(--green);
+	color: #411B99;
+	color: var(--purple);
 	display: grid;
 	font-family: "Raleway", sans-serif;
 	font-family: var(--en-font);
@@ -1430,8 +1428,7 @@ a {
 .mv__scroll-text::after {
 	-webkit-clip-path: inset(100% 0 0 0);
 	animation: 2.5s scroll ease-out infinite;
-	background-color: #0CA896;
-	background-color: var(--green);
+	background-color: currentColor;
 	clip-path: inset(100% 0 0 0);
 	content: "";
 	grid-column: 1;
@@ -1610,13 +1607,13 @@ a {
 	width: calc(var(--_width-sp) / 16 * 1rem);
 }
 
-.section-title__en--screen {
-	mix-blend-mode: screen;
-}
-
 .section-title__en img {
 	-o-object-fit: contain;
 	object-fit: contain;
+}
+
+.section-title__en--screen {
+	mix-blend-mode: screen;
 }
 
 .section-title__ja {
@@ -1637,12 +1634,13 @@ a {
 }
 
 .service__accent {
-	-webkit-writing-mode: sideways-lr;
+	-webkit-writing-mode: vertical-rl;
 	left: -1rem;
 	mix-blend-mode: soft-light;
 	position: absolute;
 	top: 27.5%;
-	writing-mode: sideways-lr;
+	transform: rotate(180deg);
+	writing-mode: vertical-rl;
 }
 
 .service__container {
@@ -1962,9 +1960,9 @@ html {
 }
 
 .company__history-list {
-	margin-top: 4rem;
+	margin-top: 3.875rem;
 	max-width: 60.125rem;
-	row-gap: 0.75rem;
+	row-gap: 0.4375rem;
 }
 
 .company__history-list::before {
@@ -1981,22 +1979,22 @@ html {
 .company__history-item {
 	grid-column-gap: 1.6875rem;
 	-moz-column-gap: 1.6875rem;
-	grid-row-gap: 0.75rem;
+	grid-row-gap: 0.1875rem;
 	column-gap: 1.6875rem;
 	display: grid;
 	grid-template-columns: auto auto 1fr;
-	row-gap: 0.75rem;
+	row-gap: 0.1875rem;
 }
 
 .company__history-year {
 	font-size: 2.1875rem;
-	line-height: 1.3428571429;
+	line-height: 1.4571428571;
 }
 
 .company__history-wrap {
 	grid-column: 2/4;
 	grid-template-columns: 2.1875rem 1fr;
-	padding-top: 0.375rem;
+	padding-top: 0.625rem;
 }
 
 .company__history-wrap:first-of-type {
@@ -2204,11 +2202,6 @@ html {
 	margin-top: 1.875rem;
 }
 
-.form__acceptance input + span::after {
-	bottom: auto;
-	bottom: initial;
-}
-
 .form__text {
 	margin-top: 3.75rem;
 }
@@ -2245,7 +2238,7 @@ html {
 
 .form__privacy-policy-inner {
 	padding-left: 2.625rem;
-	padding-right: 4rem;
+	padding-right: 2.625rem;
 }
 
 .header__inner {
