--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -35,6 +35,7 @@
   transform: translateY(-50%);
   left: calc(32/430*100vw);
   width: rem(270);
+  z-index: 2;
 
   @include mq("md") {
     top: 50%;
@@ -103,7 +104,7 @@
   font-weight: var(--font-semi-bold);
   font-family: var(--en-font);
   font-style: italic;
-  color: var(--green);
+  color: var(--purple);
   line-height: calc(15/13);
   text-transform: uppercase;
   writing-mode: vertical-rl;
@@ -128,7 +129,7 @@
   content: "";
   width: rem(2);
   height: 100%;
-  background-color: var(--green);
+  background-color: currentColor;
   grid-row: 1;
   grid-column: 1;
   clip-path: inset(100% 0 0 0);
